Generics/Code2_error_report.txt
javac errors for Code2.java 
Code2.java:16: error: method foo in class Code2 cannot be applied to given types;
        foo(m, l, l, l2);
        ^
  required: Map<T,T>,List<T>,List<T>,List<T>
  found: Map<Number,Number>,List<Integer>,List<Integer>,List<Integer>
  reason: inferred type does not conform to equality constraint(s)
    inferred: Integer
    equality constraints(s): Integer,Number
  where T is a type-variable:
    T extends Object declared in method <T>foo(Map<T,T>,List<T>,List<T>,List<T>)
1 error
 
============================================================================= 
ExtendJ errors for Code2.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code2.java:16: error: no method named foo(java.util.Map<java.lang.Number, java.lang.Number>, java.util.List<java.lang.Integer>, java.util.List<java.lang.Integer>, java.util.List<java.lang.Integer>) in Generics.Code2 matches. However, there is a method foo(java.util.Map<T, T>, java.util.List<T>, java.util.List<T>, java.util.List<T>)
 
============================================================================= 
Eclipse ECJ errors for Code2.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code2.java (at line 16)
	foo(m, l, l, l2);
	^^^
The method foo(Map<T,T>, List<T>, List<T>, List<T>) in the type Code2 is not applicable for the arguments (Map<Number,Number>, List<Integer>, List<Integer>, List<Integer>)
----------
1 problem (1 error)
